[package]
name = "async-aria2"
version = "0.1.1"
authors = ["futawait <57043008+futawait@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Aria2 JSON-RPC in rust"
homepage = "https://github.com/futawait/async-aria2"
documentation = "https://github.com/futawait/async-aria2"
repository = "https://github.com/futawait/async-aria2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.9", features = ["process", "io-util", "time", "macros"] }
rand = "0.7.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
reqwest = "0.10.1"
base64 = "0.11.0"